Lambda post confirmation Aggiunta UUID alla tabella User del DB

--- a/client/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/client/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_explore"
-        android:icon="@drawable/child_explore"
+        android:icon="@drawable/child_routes"
         android:title="Home" />
 
     <item
