--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:contentDescription="@string/cover_login"
-        android:src="@drawable/ic_undraw_login"
+        android:contentDescription="@string/cover_authentication"
+        android:src="@drawable/ic_undraw_authentication"
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
