--- a/client/app/src/main/res/layout/fragment_confirmation.xml
+++ b/client/app/src/main/res/layout/fragment_confirmation.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.confirmation.ConfirmationFragment">
+    android:background="?colorOnSurfaceInverse"
+    tools:context=".presentation.registration.ConfirmationFragment">
 
     <ImageView
-        android:id="@+id/image_login"
+        android:id="@+id/image_confirmation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:contentDescription="@string/cover_login"
-        android:src="@drawable/ic_undraw_login"
+        android:layout_marginTop="110dp"
+        android:contentDescription="@string/cover_authentication"
+        android:src="@drawable/ic_undraw_authentication"
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,45 +26,43 @@
         android:layout_marginTop="27dp"
         android:contentDescription="@string/logo_app"
         android:src="@drawable/ic_natour_logo"
-        app:layout_constraintBottom_toTopOf="@id/textfield_username"
+        app:layout_constraintBottom_toTopOf="@id/textfield_confirm_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_login" />
+        app:layout_constraintTop_toBottomOf="@+id/image_confirmation" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textfield_username"
+        android:id="@+id/textfield_confirm_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/confirmation_code_hint"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
+        app:layout_constraintBottom_toTopOf="@id/button_confirmation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_app_logo"
-        app:layout_constraintBottom_toTopOf="@id/button_confirmation_mode">
+        app:layout_constraintTop_toBottomOf="@+id/image_app_logo">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_username"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button_confirmation_mode"
-        style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="114dp"
+        android:id="@+id/button_confirmation"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
         android:layout_marginTop="27dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="315dp"
         android:text="@string/button_signup_text"
+        android:enabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf=""
-        app:layout_constraintVertical_bias="0.298" />
+        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
