--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?colorOnSurfaceInverse"
     tools:context=".presentation.login.LoginFragment">
 
     <ImageView
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/hint_username"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@id/textfield_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,8 +46,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_username"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/hint_password"
+        android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +66,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_password"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             tools:ignore="TextContrastCheck" />
 
@@ -89,7 +92,7 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="80dp"
-        android:enabled="false"
+        android:enabled="true"
         android:text="@string/button_login_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/button_signup"
@@ -99,13 +102,12 @@
         android:id="@+id/linearlayout_social"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="232dp"
-        android:layout_marginBottom="23dp"
+
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_password">
+        android:layout_marginBottom="23dp" >
 
         <LinearLayout
             android:layout_width="wrap_content"
