--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?colorOnSurfaceInverse"
     tools:context=".presentation.registration.RegistrationFragment">
 
     <ImageView
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/username"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@id/textfield_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +48,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_username"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             tools:ignore="TextContrastCheck" />
 
@@ -58,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/email_hint"
+        android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@+id/textfield_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,8 +71,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_email"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/hint_password"
+        android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@id/textfield_confirm_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,8 +92,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_password"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             tools:ignore="TextContrastCheck" />
 
@@ -100,6 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:hint="@string/confirm_password_hint"
+        android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/button_signup"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,8 +114,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textinput_confirm_password"
-            android:layout_width="250dp"
-            android:layout_height="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             tools:ignore="TextContrastCheck" />
 
@@ -120,10 +126,8 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginBottom="85dp"
-        android:enabled="false"
+        android:layout_marginBottom="0dp"
+        android:enabled="true"
         android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
