--- a/client/app/src/main/res/values-night/splash.xml
+++ b/client/app/src/main/res/values-night/splash.xml
@@ -3,7 +3,8 @@
     <style name="Theme.NaTour.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/md_theme_dark_inverseOnSurface</item>
 
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_natour_logo_icon</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/avd_natour_logo_icon</item>
+        <item name="windowSplashScreenAnimationDuration">300</item>
 
         <item name="postSplashScreenTheme">@style/Theme.NaTour</item>
     </style>
