--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -189,7 +189,7 @@
         android:text="@string/forgot_password"
         android:minWidth="250dp"
         android:textSize="13sp"
-        android:textColor="@color/md_theme_light_tertiary"
+        android:textColor="?colorTertiary"
         android:layout_marginTop="4dp"
         app:layout_constraintBottom_toTopOf="@+id/button_signup"
         app:layout_constraintEnd_toEndOf="parent"
