Aggiunti commenti, migliorate le stringhe e la gestione degli errori

--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="@string/email_hint"
+        android:hint="@string/hint_email"
         android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@+id/textfield_password"
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="@string/confirm_password_hint"
+        android:hint="@string/hint_confirm_password"
         android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/button_signup"
@@ -128,7 +128,7 @@
         android:layout_marginTop="14dp"
         android:layout_marginBottom="0dp"
         android:enabled="true"
-        android:text="@string/sign_up"
+        android:text="@string/button_signup_send_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
