--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="@string/username"
+        android:hint="@string/hint_username"
         android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@id/textfield_email"
