UseCase per reset password e invio codice di conferma

--- a/client/app/src/main/res/layout/fragment_confirmation.xml
+++ b/client/app/src/main/res/layout/fragment_confirmation.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/BackgroundAlternative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?colorOnSurfaceInverse"
     tools:context=".presentation.registration.ConfirmationFragment">
 
     <ImageView
         android:id="@+id/image_confirmation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/cover_authentication"
         android:layout_marginTop="30dp"
+        android:contentDescription="@string/cover_authentication"
         android:src="@drawable/ic_undraw_authentication"
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,19 +52,33 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <TextView
+        android:id="@+id/textview_resend_code"
+        style="@style/Widget.NaTour.TextWithAction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:minWidth="250dp"
+        android:text="@string/resend_confirmation_code"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_confirmation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code" />
+
     <Button
         android:id="@+id/button_confirmation"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="315dp"
         android:enabled="true"
         android:text="@string/button_signup_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textfield_confirm_code" />
+        app:layout_constraintTop_toBottomOf="@id/textview_resend_code" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -76,19 +90,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/resend_confirmation_code"
-        android:layout_width="174dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="14dp"
-        android:text="@string/resend_confirmation_code"
-        android:textColor="@color/md_theme_light_primary"
-        app:layout_constraintBottom_toTopOf="@+id/button_confirmation"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code"
-        app:layout_constraintVertical_bias="0.888" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
