--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/BackgroundAlternative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?colorOnSurfaceInverse"
-    tools:context=".presentation.login.LoginFragment">
+    tools:context=".presentation.login.LoginFragment"
+    tools:ignore="PrivateResource">
 
     <ImageView
         android:id="@+id/image_login"
@@ -73,6 +74,20 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/textview_forgot_password"
+        style="@style/Widget.NaTour.TextWithAction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:minWidth="250dp"
+        android:text="@string/forgot_password"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_signup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textfield_password" />
+
     <Button
         android:id="@+id/button_signup"
         style="@style/Widget.Material3.Button.OutlinedButton"
@@ -83,7 +98,8 @@
         android:text="@string/button_signup_text"
         app:layout_constraintEnd_toStartOf="@id/button_login"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_forgot_password" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_forgot_password"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/button_login"
@@ -150,7 +166,6 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="11dp"
                 android:layout_marginVertical="4dp"
-                android:background="@null"
                 android:contentDescription="@string/logo_google"
                 android:src="@drawable/ic_google_logo"
                 tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -181,19 +196,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textview_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/forgot_password"
-        android:minWidth="250dp"
-        android:textSize="13sp"
-        android:textColor="?colorTertiary"
-        android:layout_marginTop="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_password"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
