--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -3,9 +3,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/BackgroundAlternative"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?colorOnSurfaceInverse"
+    android:layout_height="match_parent"
     tools:context=".presentation.registration.RegistrationFragment">
 
     <ImageView
