- Aggiunti ultimi Fragment per il flow di Autenticazione (ora comprende Reset password). Da completare la funzione per resettare la password dopo aver inserito il codice di conferma; - Prima prova Grafo Annidato, utile per navigazioni indipendenti con un unico entry point.
DA FARE:
- Valutare la modifica dei package nel Presentation Layer;
- Gestione delle View Master-Detail vista la molteplicità di opzioni presenti;
- Test manuali più precisi;

--- a/client/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/client/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/BackgroundAlternative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.registration.confirmation.ConfirmationFragment">
+    tools:context=".presentation.login.forgot_password.ForgotPasswordFragment">
 
     <ImageView
-        android:id="@+id/image_confirmation"
+        android:id="@+id/image_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:contentDescription="@string/cover_authentication"
-        android:src="@drawable/ic_undraw_confirm_code"
+        android:contentDescription="@string/cover_password"
+        android:src="@drawable/ic_undraw_forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,19 +26,19 @@
         android:layout_marginTop="15dp"
         android:contentDescription="@string/logo_app"
         android:src="@drawable/ic_natour_logo"
-        app:layout_constraintBottom_toTopOf="@id/textfield_confirm_code"
+        app:layout_constraintBottom_toTopOf="@id/textfield_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_confirmation" />
+        app:layout_constraintTop_toBottomOf="@+id/image_forgot_password" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textfield_confirm_code"
+        android:id="@+id/textfield_username"
         android:layout_width="250dp"
         android:layout_height="56dp"
         android:layout_marginTop="15dp"
-        android:hint="@string/hint_confirmation_code"
+        android:hint="@string/hint_username"
         app:endIconMode="clear_text"
-        app:layout_constraintBottom_toTopOf="@id/button_confirmation"
+        app:layout_constraintBottom_toTopOf="@id/button_send_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_app_logo">
@@ -50,33 +50,16 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <TextView
-        android:id="@+id/textview_resend_code"
-        style="@style/Widget.NaTour.TextWithAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:minWidth="250dp"
-        android:text="@string/resend_confirmation_code"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_confirmation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code" />
-
     <Button
-        android:id="@+id/button_confirmation"
+        android:id="@+id/button_send_code"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="315dp"
         android:enabled="true"
-        android:text="@string/button_confirm_text"
+        android:text="@string/button_forgot_password_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_resend_code" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
