--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -5,8 +5,7 @@
     style="@style/BackgroundAlternative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.login.LoginFragment"
-    tools:ignore="PrivateResource">
+    tools:context=".presentation.login.LoginFragment">
 
     <ImageView
         android:id="@+id/image_login"
@@ -22,11 +21,9 @@
 
     <ImageView
         android:id="@+id/image_app_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/AppLogo"
         android:layout_marginTop="15dp"
         android:contentDescription="@string/logo_app"
-        android:src="@drawable/ic_natour_logo"
         app:layout_constraintBottom_toTopOf="@id/textfield_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,11 +31,10 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="56dp"
         android:layout_marginTop="15dp"
         android:hint="@string/hint_username"
-        android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:layout_constraintBottom_toTopOf="@id/textfield_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +42,6 @@
         app:layout_constraintTop_toBottomOf="@+id/image_app_logo">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textinput_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:ignore="TextContrastCheck" />
@@ -55,18 +50,16 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="56dp"
         android:layout_marginTop="10dp"
         android:hint="@string/hint_password"
-        android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textfield_username">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textinput_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -82,7 +75,6 @@
         android:layout_marginTop="5dp"
         android:minWidth="250dp"
         android:text="@string/forgot_password"
-        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +110,6 @@
         android:id="@+id/linearlayout_social"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="23dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -166,6 +157,7 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="11dp"
                 android:layout_marginVertical="4dp"
+                android:background="@null"
                 android:contentDescription="@string/logo_google"
                 android:src="@drawable/ic_google_logo"
                 tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
